0.4.3:
James Boucher - Mon Jan  8 06:53:31 PST 2001
 * Changes to compile correctly on QNX RTP
Sam Lantinga - Thu Dec 21 10:52:28 PST 2000
 * Fixed SMPEG_renderFinal() to a different display surface
Stephane Peter - Thu, 21 Dec 2000 02:07:07 -0800 (PST)
 * Fixed plaympeg fullscreen toggling for multiple videos
Vivien Chappelier - Thu Dec 14 16:21:32 PST 2000
 * Fixed MPEGSystem::TotalTime() hanging on small files
 * Fixed system header decoding (caused misdetection of system streams)
 * Added bilinear filter toggling with the 'f' key in plaympeg
Maxim Sobolev - Mon Dec 11 11:54:46 PST 2000
 * Use the correct SDL configuration script on FreeBSD

0.4.2:
Sam Lantinga - Thu Dec  7 18:14:14 PST 2000
 * Check for the GLU library when seeing if we can build the OpenGL example
Mo DeJong - Mon Dec  4 12:26:18 PST 2000
 * Fixed crash when loading files of zero bytes
Sam Lantinga - Sat Dec  2 13:51:21 PST 2000
 * Added --enable-threaded-system configure option (defaults off)
Sam Lantinga - Sat Dec  2 13:40:33 PST 2000
 * Fixed end of stream detection
Sam Lantinga - Sat Dec  2 11:36:50 PST 2000
 * Fixed crashes in gtv when trying to play MP3 files with no video
Sam Lantinga - Fri Dec  1 20:39:39 PST 2000
 * Disabled the system thread by default.
   You can re-enable it by looking for USE_SYSTEM_THREAD in MPEGsystem.cpp
Sam Lantinga - Fri Dec  1 18:07:50 PST 2000
 * Fixed RenderFinal() to a different surface than the original one
Vivien Chappelier - Fri Nov 17 13:35:36 PST 2000
 * Fixed seeking in MPEG files
Joe Valenzuela - Fri Nov 17 13:28:38 PST 2000
 * Fixed crash in system data decoding
Bruce Merry - Fri Nov 10 09:49:59 PST 2000
 * Removed movie size limitations from glmovie, works great!
Sam Lantinga - Fri Oct 27 15:11:33 PDT 2000
 * Fixed hang when audio data was partially corrupt in the first block
Hiroshi Yamashita - Sat, 14 Oct 2000 23:43:33 +0900
 * Fixed bug where audio was always mono
SiKang - Fri, 6 Oct 2000 15:23:13 +0900